--- a/public/css/global.css
+++ b/public/css/global.css
@@ -6,6 +6,9 @@ body {
   @apply bg-graphite-gray font-Montserrat font-normal text-base;
 }
 
+span {
+  @apply inline-block
+}
 .container {
   @apply max-w-[1234px] mx-auto;
 }
