--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -610,6 +610,10 @@ video {
   position: static;
 }
 
+.fixed {
+  position: fixed;
+}
+
 .absolute {
   position: absolute;
 }
@@ -620,6 +624,10 @@ video {
 
 .sticky {
   position: sticky;
+}
+
+.bottom-\[100px\] {
+  bottom: 100px;
 }
 
 .bottom-\[177px\] {
@@ -658,8 +666,16 @@ video {
   left: 30px;
 }
 
+.left-\[326px\] {
+  left: 326px;
+}
+
 .right-0 {
   right: 0px;
+}
+
+.right-5 {
+  right: 1.25rem;
 }
 
 .right-\[70px\] {
@@ -686,6 +702,10 @@ video {
   top: 237px;
 }
 
+.top-\[23px\] {
+  top: 23px;
+}
+
 .top-\[34px\] {
   top: 34px;
 }
@@ -704,6 +724,10 @@ video {
 
 .z-50 {
   z-index: 50;
+}
+
+.z-\[100\] {
+  z-index: 100;
 }
 
 .-order-1 {
@@ -749,12 +773,20 @@ video {
   margin-bottom: 10px;
 }
 
+.mb-\[14px\] {
+  margin-bottom: 14px;
+}
+
 .mb-\[150px\] {
   margin-bottom: 150px;
 }
 
 .mb-\[164px\] {
   margin-bottom: 164px;
+}
+
+.mb-\[16px\] {
+  margin-bottom: 16px;
 }
 
 .mb-\[31px\] {
@@ -771,6 +803,10 @@ video {
 
 .mb-\[43px\] {
   margin-bottom: 43px;
+}
+
+.mb-\[7px\] {
+  margin-bottom: 7px;
 }
 
 .ml-auto {
@@ -829,10 +865,6 @@ video {
   margin-top: 11px;
 }
 
-.mt-\[120px\] {
-  margin-top: 120px;
-}
-
 .mt-\[150px\] {
   margin-top: 150px;
 }
@@ -855,6 +887,10 @@ video {
 
 .mt-\[28px\] {
   margin-top: 28px;
+}
+
+.mt-\[29px\] {
+  margin-top: 29px;
 }
 
 .mt-\[30px\] {
@@ -881,10 +917,6 @@ video {
   margin-top: 43px;
 }
 
-.mt-\[45px\] {
-  margin-top: 45px;
-}
-
 .mt-\[50px\] {
   margin-top: 50px;
 }
@@ -895,18 +927,6 @@ video {
 
 .mt-\[60px\] {
   margin-top: 60px;
-}
-
-.mb-\[\] {
-  margin-bottom: ;
-}
-
-.mb-\[16px\] {
-  margin-bottom: 16px;
-}
-
-.mt-\[29px\] {
-  margin-top: 29px;
 }
 
 .block {
@@ -949,6 +969,10 @@ video {
   height: 110px;
 }
 
+.h-\[15px\] {
+  height: 15px;
+}
+
 .h-\[176px\] {
   height: 176px;
 }
@@ -961,12 +985,16 @@ video {
   height: 213px;
 }
 
-.h-\[278px\] {
-  height: 278px;
+.h-\[244px\] {
+  height: 244px;
 }
 
-.h-\[280px\] {
-  height: 280px;
+.h-\[265px\] {
+  height: 265px;
+}
+
+.h-\[278px\] {
+  height: 278px;
 }
 
 .h-\[342px\] {
@@ -989,6 +1017,10 @@ video {
   height: 467px;
 }
 
+.h-\[50px\] {
+  height: 50px;
+}
+
 .h-\[52px\] {
   height: 52px;
 }
@@ -999,10 +1031,6 @@ video {
 
 .h-\[60px\] {
   height: 60px;
-}
-
-.h-\[652px\] {
-  height: 652px;
 }
 
 .h-\[86px\] {
@@ -1029,20 +1057,8 @@ video {
   height: 100%;
 }
 
-.h-\[15px\] {
-  height: 15px;
-}
-
-.h-\[400px\] {
-  height: 400px;
-}
-
-.h-\[244px\] {
-  height: 244px;
-}
-
-.h-\[265px\] {
-  height: 265px;
+.h-screen {
+  height: 100vh;
 }
 
 .w-1 {
@@ -1081,12 +1097,20 @@ video {
   width: 156px;
 }
 
+.w-\[15px\] {
+  width: 15px;
+}
+
 .w-\[161px\] {
   width: 161px;
 }
 
 .w-\[1px\] {
   width: 1px;
+}
+
+.w-\[205px\] {
+  width: 205px;
 }
 
 .w-\[238px\] {
@@ -1099,6 +1123,14 @@ video {
 
 .w-\[256px\] {
   width: 256px;
+}
+
+.w-\[276px\] {
+  width: 276px;
+}
+
+.w-\[316px\] {
+  width: 316px;
 }
 
 .w-\[32px\] {
@@ -1117,16 +1149,16 @@ video {
   width: 441px;
 }
 
+.w-\[50px\] {
+  width: 50px;
+}
+
 .w-\[52px\] {
   width: 52px;
 }
 
 .w-\[60px\] {
   width: 60px;
-}
-
-.w-\[616px\] {
-  width: 616px;
 }
 
 .w-\[86px\] {
@@ -1146,10 +1178,6 @@ video {
   width: 100%;
 }
 
-.w-\[15px\] {
-  width: 15px;
-}
-
 .min-w-\[15px\] {
   min-width: 15px;
 }
@@ -1166,10 +1194,6 @@ video {
   max-width: 351px;
 }
 
-.max-w-\[485px\] {
-  max-width: 485px;
-}
-
 .max-w-\[515px\] {
   max-width: 515px;
 }
@@ -1180,10 +1204,6 @@ video {
 
 .max-w-\[526px\] {
   max-width: 526px;
-}
-
-.max-w-\[600px\] {
-  max-width: 600px;
 }
 
 .max-w-\[668px\] {
@@ -1350,10 +1370,6 @@ video {
   gap: 53px;
 }
 
-.gap-\[\] {
-  gap: ;
-}
-
 .gap-y-\[19px\] {
   row-gap: 19px;
 }
@@ -1368,12 +1384,6 @@ video {
   --tw-space-x-reverse: 0;
   margin-right: calc(10px * var(--tw-space-x-reverse));
   margin-left: calc(10px * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-\[50px\] > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(50px * var(--tw-space-x-reverse));
-  margin-left: calc(50px * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
@@ -1428,12 +1438,6 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(20px * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(20px * var(--tw-space-y-reverse));
-}
-
-.space-y-\[22px\] > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(22px * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(22px * var(--tw-space-y-reverse));
 }
 
 .space-y-\[2px\] > :not([hidden]) ~ :not([hidden]) {
@@ -1619,6 +1623,10 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
+.bg-\[\#00000099\] {
+  background-color: #00000099;
+}
+
 .bg-\[\#313245\] {
   --tw-bg-opacity: 1;
   background-color: rgb(49 50 69 / var(--tw-bg-opacity));
@@ -1752,9 +1760,9 @@ video {
   padding-bottom: 1.5rem;
 }
 
-.py-7 {
-  padding-top: 1.75rem;
-  padding-bottom: 1.75rem;
+.py-\[13px\] {
+  padding-top: 13px;
+  padding-bottom: 13px;
 }
 
 .py-\[18px\] {
@@ -1770,11 +1778,6 @@ video {
 .py-\[22px\] {
   padding-top: 22px;
   padding-bottom: 22px;
-}
-
-.py-\[13px\] {
-  padding-top: 13px;
-  padding-bottom: 13px;
 }
 
 .pb-10px {
@@ -1801,10 +1804,6 @@ video {
   padding-bottom: 2.25rem;
 }
 
-.pb-\[120px\] {
-  padding-bottom: 120px;
-}
-
 .pb-\[18px\] {
   padding-bottom: 18px;
 }
@@ -1819,6 +1818,10 @@ video {
 
 .pb-\[300px\] {
   padding-bottom: 300px;
+}
+
+.pb-\[30px\] {
+  padding-bottom: 30px;
 }
 
 .pb-\[31px\] {
@@ -1845,6 +1848,10 @@ video {
   padding-bottom: 7px;
 }
 
+.pl-10 {
+  padding-left: 2.5rem;
+}
+
 .pl-5 {
   padding-left: 1.25rem;
 }
@@ -1861,16 +1868,8 @@ video {
   padding-left: 35px;
 }
 
-.pl-\[54px\] {
-  padding-left: 54px;
-}
-
-.pl-\[63px\] {
-  padding-left: 63px;
-}
-
-.pl-\[98px\] {
-  padding-left: 98px;
+.pr-10 {
+  padding-right: 2.5rem;
 }
 
 .pr-5 {
@@ -1889,16 +1888,16 @@ video {
   padding-right: 2.25rem;
 }
 
+.pr-\[13px\] {
+  padding-right: 13px;
+}
+
 .pr-\[30px\] {
   padding-right: 30px;
 }
 
 .pr-\[5px\] {
   padding-right: 5px;
-}
-
-.pr-\[63px\] {
-  padding-right: 63px;
 }
 
 .pt-11 {
@@ -1957,16 +1956,8 @@ video {
   padding-top: 50px;
 }
 
-.pr-\[40px\] {
-  padding-right: 40px;
-}
-
-.pr-10 {
-  padding-right: 2.5rem;
-}
-
-.pl-10 {
-  padding-left: 2.5rem;
+.pb-\[27px\] {
+  padding-bottom: 27px;
 }
 
 .text-center {
@@ -2018,10 +2009,6 @@ video {
   font-size: 20px;
 }
 
-.text-\[28px\] {
-  font-size: 28px;
-}
-
 .text-\[32px\] {
   font-size: 32px;
 }
@@ -2042,14 +2029,13 @@ video {
   font-size: 48px;
 }
 
+.text-\[54px\] {
+  font-size: 54px;
+}
+
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
-}
-
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
 }
 
 .text-sm {
@@ -2151,10 +2137,6 @@ video {
   line-height: 20px;
 }
 
-.leading-\[22px\] {
-  line-height: 22px;
-}
-
 .leading-\[24px\] {
   line-height: 24px;
 }
@@ -2175,6 +2157,10 @@ video {
   line-height: 41.28px;
 }
 
+.leading-\[44\.56px\] {
+  line-height: 44.56px;
+}
+
 .leading-\[46\.79px\] {
   line-height: 46.79px;
 }
@@ -2183,16 +2169,8 @@ video {
   line-height: 53.47px;
 }
 
-.leading-\[60px\] {
-  line-height: 60px;
-}
-
-.leading-\[\] {
-  line-height: ;
-}
-
-.leading-3 {
-  line-height: .75rem;
+.leading-\[60\.16px\] {
+  line-height: 60.16px;
 }
 
 .tracking-\[1px\] {
@@ -2709,11 +2687,6 @@ input[type="range"]:focus {
   padding-right: 0px;
 }
 
-/* .products-box.list-product .product-box:last-child
-.products-box.list-product .product-box:first-child {
-  border: none;
-} */
-
 .products-box.list-product .product-box:nth-child(even) {
   border-top: 1px solid #ecccb373;
   border-bottom: 1px solid #ecccb373;
@@ -2733,7 +2706,7 @@ input[type="range"]:focus {
 }
 
 .products-box.list-product .layout-hide {
-  display: none;
+  /* display: none; */
 }
 
 .products-box.list-product .list-block {
@@ -2769,6 +2742,21 @@ input[type="range"]:focus {
   width: 1px !important;
 }
 
+.grid-product {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(390px, 1fr));
+}
+
+.mortgage-calculator {
+  .scale {
+    margin: 0;
+  }
+}
+
+.hidden-scroll::-webkit-scrollbar {
+  display: none;
+}
+
 /* media queris */
 
 @media screen and (max-width: 1280px) {
@@ -2782,14 +2770,18 @@ input[type="range"]:focus {
     width: 100%;
   }
 
-  .swiper-scrollbar{
+  .swiper-scrollbar {
     width: 96% !important;
     height: 1px !important;
   }
 
-  .swiper-scrollbar-drag{
+  .swiper-scrollbar-drag {
     height: 3px;
     margin-top: -1px;
+  }
+
+  .products-box.list-product {
+    border-top-width: 0px;
   }
 }
 
@@ -2831,7 +2823,7 @@ input[type="range"]:focus {
   }
 
   .breadcrumb ul {
-    padding: 46px 0 10px 0;
+    padding: 0 0 10px 0;
   }
 
   .title {
@@ -2841,7 +2833,7 @@ input[type="range"]:focus {
     letter-spacing: 0.01em;
   }
 
-  .h-el{
+  .h-el {
     height: 137px !important;
   }
 
@@ -2867,16 +2859,27 @@ input[type="range"]:focus {
   .gray-btn__lg {
     height: 40px;
   }
-}
 
-.mortgage-calculator {
-  .scale {
-    margin: 0;
+  .grid-product {
+    grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
   }
 }
 
-.hidden-scroll::-webkit-scrollbar {
-  display: none;
+@media screen and (max-width: 992px) {
+  .list-block {
+    display: none !important;
+  }
+
+  .media-hide {
+    display: none;
+  }
+
+  .products-box.list-product .product-img {
+    min-width: 110px;
+    max-width: 110px;
+    height: 97px;
+    margin-right: 20px !important;
+  }
 }
 
 .placeholder\:text-\[\#3132455E\]::-moz-placeholder {
@@ -2943,6 +2946,10 @@ input[type="range"]:focus {
     display: none;
   }
 
+  .sm\:h-\[400px\] {
+    height: 400px;
+  }
+
   .sm\:h-\[450px\] {
     height: 450px;
   }
@@ -2953,10 +2960,6 @@ input[type="range"]:focus {
 
   .sm\:h-\[584px\] {
     height: 584px;
-  }
-
-  .sm\:h-\[400px\] {
-    height: 400px;
   }
 }
 
@@ -3001,13 +3004,12 @@ input[type="range"]:focus {
     order: 1;
   }
 
-  .md\:my-\[120px\] {
-    margin-top: 120px;
+  .md\:mb-\[120px\] {
     margin-bottom: 120px;
   }
 
-  .md\:mb-\[120px\] {
-    margin-bottom: 120px;
+  .md\:mb-\[35px\] {
+    margin-bottom: 35px;
   }
 
   .md\:mb-\[43px\] {
@@ -3054,6 +3056,10 @@ input[type="range"]:focus {
     margin-top: 42px;
   }
 
+  .md\:mt-\[45px\] {
+    margin-top: 45px;
+  }
+
   .md\:mt-\[46px\] {
     margin-top: 46px;
   }
@@ -3086,10 +3092,6 @@ input[type="range"]:focus {
     margin-top: 91px;
   }
 
-  .md\:mt-\[45px\] {
-    margin-top: 45px;
-  }
-
   .md\:block {
     display: block;
   }
@@ -3106,10 +3108,6 @@ input[type="range"]:focus {
     height: 150px;
   }
 
-  .md\:h-\[520px\] {
-    height: 520px;
-  }
-
   .md\:h-\[758px\] {
     height: 758px;
   }
@@ -3118,16 +3116,8 @@ input[type="range"]:focus {
     height: auto;
   }
 
-  .md\:h-\[400px\] {
-    height: 400px;
-  }
-
   .md\:w-\[175px\] {
     width: 175px;
-  }
-
-  .md\:w-\[221px\] {
-    width: 221px;
   }
 
   .md\:w-\[669px\] {
@@ -3165,10 +3155,6 @@ input[type="range"]:focus {
 
   .md\:justify-end {
     justify-content: flex-end;
-  }
-
-  .md\:gap-0 {
-    gap: 0px;
   }
 
   .md\:gap-2\.5 {
@@ -3280,8 +3266,16 @@ input[type="range"]:focus {
     padding-left: 2rem;
   }
 
+  .md\:pl-\[63px\] {
+    padding-left: 63px;
+  }
+
   .md\:pr-6 {
     padding-right: 1.5rem;
+  }
+
+  .md\:pr-\[63px\] {
+    padding-right: 63px;
   }
 
   .md\:pt-10 {
@@ -3304,14 +3298,6 @@ input[type="range"]:focus {
     padding-top: 92px;
   }
 
-  .md\:pr-\[63px\] {
-    padding-right: 63px;
-  }
-
-  .md\:pl-\[63px\] {
-    padding-left: 63px;
-  }
-
   .md\:text-left {
     text-align: left;
   }
@@ -3323,6 +3309,14 @@ input[type="range"]:focus {
   .md\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
+  }
+
+  .md\:text-\[128px\] {
+    font-size: 128px;
+  }
+
+  .md\:text-\[28px\] {
+    font-size: 28px;
   }
 
   .md\:text-\[54px\] {
@@ -3348,16 +3342,16 @@ input[type="range"]:focus {
     line-height: 1.25rem;
   }
 
-  .md\:text-\[28px\] {
-    font-size: 28px;
-  }
-
   .md\:leading-6 {
     line-height: 1.5rem;
   }
 
   .md\:leading-\[106\.94px\] {
     line-height: 106.94px;
+  }
+
+  .md\:leading-\[142\.59px\] {
+    line-height: 142.59px;
   }
 
   .md\:leading-\[19\.5px\] {
@@ -3424,12 +3418,12 @@ input[type="range"]:focus {
     height: 260px;
   }
 
-  .lg-plus\:h-\[435px\] {
-    height: 435px;
-  }
-
   .lg-plus\:h-\[34px\] {
     height: 34px;
+  }
+
+  .lg-plus\:h-\[435px\] {
+    height: 435px;
   }
 
   .lg-plus\:h-\[652px\] {
@@ -3453,12 +3447,12 @@ input[type="range"]:focus {
     width: fit-content;
   }
 
-  .lg-plus\:max-w-\[526px\] {
-    max-width: 526px;
-  }
-
   .lg-plus\:max-w-\[485px\] {
     max-width: 485px;
+  }
+
+  .lg-plus\:max-w-\[526px\] {
+    max-width: 526px;
   }
 
   .lg-plus\:max-w-\[600px\] {
@@ -3477,12 +3471,12 @@ input[type="range"]:focus {
     gap: 1.5rem;
   }
 
-  .lg-plus\:gap-\[46px\] {
-    gap: 46px;
-  }
-
   .lg-plus\:gap-\[30px\] {
     gap: 30px;
+  }
+
+  .lg-plus\:gap-\[46px\] {
+    gap: 46px;
   }
 
   .lg-plus\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
@@ -3545,12 +3539,20 @@ input[type="range"]:focus {
     padding-bottom: 0.5rem;
   }
 
+  .lg-plus\:pb-\[120px\] {
+    padding-bottom: 120px;
+  }
+
   .lg-plus\:pb-\[180px\] {
     padding-bottom: 180px;
   }
 
   .lg-plus\:pl-\[26px\] {
     padding-left: 26px;
+  }
+
+  .lg-plus\:pl-\[54px\] {
+    padding-left: 54px;
   }
 
   .lg-plus\:pr-7 {
@@ -3565,20 +3567,12 @@ input[type="range"]:focus {
     padding-top: 1.5rem;
   }
 
-  .lg-plus\:pt-\[50px\] {
-    padding-top: 50px;
-  }
-
-  .lg-plus\:pb-\[120px\] {
-    padding-bottom: 120px;
-  }
-
-  .lg-plus\:pl-\[54px\] {
-    padding-left: 54px;
-  }
-
   .lg-plus\:pt-\[17px\] {
     padding-top: 17px;
+  }
+
+  .lg-plus\:pt-\[50px\] {
+    padding-top: 50px;
   }
 }
 
@@ -3683,20 +3677,44 @@ input[type="range"]:focus {
 }
 
 @media (min-width: 1280px) {
-  .xl\:-ml-\[53px\] {
-    margin-left: -53px;
+  .xl\:relative {
+    position: relative;
   }
 
-  .xl\:mr-0 {
-    margin-right: 0px;
+  .xl\:-ml-\[53px\] {
+    margin-left: -53px;
   }
 
   .xl\:mb-\[43px\] {
     margin-bottom: 43px;
   }
 
+  .xl\:mr-0 {
+    margin-right: 0px;
+  }
+
+  .xl\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .xl\:flex {
+    display: flex;
+  }
+
+  .xl\:hidden {
+    display: none;
+  }
+
   .xl\:h-\[520px\] {
     height: 520px;
+  }
+
+  .xl\:h-auto {
+    height: auto;
+  }
+
+  .xl\:w-\[145px\] {
+    width: 145px;
   }
 
   .xl\:w-\[221px\] {
@@ -3707,34 +3725,80 @@ input[type="range"]:focus {
     width: 616px;
   }
 
+  .xl\:w-fit {
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+
+  .xl\:w-full {
+    width: 100%;
+  }
+
   .xl\:max-w-\[1388px\] {
     max-width: 1388px;
+  }
+
+  .xl\:max-w-\[254px\] {
+    max-width: 254px;
+  }
+
+  .xl\:translate-x-\[unset\] {
+    --tw-translate-x: unset;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
   .xl\:flex-row {
     flex-direction: row;
   }
 
-  .xl\:gap-\[52px\] {
-    gap: 52px;
+  .xl\:items-end {
+    align-items: flex-end;
   }
 
   .xl\:gap-0 {
     gap: 0px;
   }
 
+  .xl\:gap-10 {
+    gap: 2.5rem;
+  }
+
+  .xl\:gap-12 {
+    gap: 3rem;
+  }
+
+  .xl\:gap-5 {
+    gap: 1.25rem;
+  }
+
   .xl\:gap-\[50px\] {
     gap: 50px;
   }
 
-  .xl\:space-x-\[50px\] > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(50px * var(--tw-space-x-reverse));
-    margin-left: calc(50px * calc(1 - var(--tw-space-x-reverse)));
+  .xl\:gap-\[52px\] {
+    gap: 52px;
+  }
+
+  .xl\:space-y-6 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
+  }
+
+  .xl\:divide-solid > :not([hidden]) ~ :not([hidden]) {
+    border-style: solid;
   }
 
   .xl\:overflow-hidden {
     overflow: hidden;
+  }
+
+  .xl\:border-b-0 {
+    border-bottom-width: 0px;
+  }
+
+  .xl\:border-t {
+    border-top-width: 1px;
   }
 
   .xl\:px-0 {
@@ -3742,11 +3806,19 @@ input[type="range"]:focus {
     padding-right: 0px;
   }
 
-  .xl\:pr-\[102px\] {
-    padding-right: 102px;
+  .xl\:pb-\[38px\] {
+    padding-bottom: 38px;
   }
 
   .xl\:pl-\[98px\] {
     padding-left: 98px;
+  }
+
+  .xl\:pr-\[102px\] {
+    padding-right: 102px;
+  }
+
+  .xl\:pt-0 {
+    padding-top: 0px;
   }
 }
