--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -710,6 +710,14 @@ video {
   top: 34px;
 }
 
+.right-\[-35px\] {
+  right: -35px;
+}
+
+.top-\[0\] {
+  top: 0;
+}
+
 .-z-10 {
   z-index: -10;
 }
@@ -728,6 +736,10 @@ video {
 
 .z-\[100\] {
   z-index: 100;
+}
+
+.z-\[299\] {
+  z-index: 299;
 }
 
 .-order-1 {
@@ -787,6 +799,10 @@ video {
 
 .mb-\[16px\] {
   margin-bottom: 16px;
+}
+
+.mb-\[30px\] {
+  margin-bottom: 30px;
 }
 
 .mb-\[31px\] {
@@ -905,10 +921,6 @@ video {
   margin-top: 33px;
 }
 
-.mt-\[36px\] {
-  margin-top: 36px;
-}
-
 .mt-\[38px\] {
   margin-top: 38px;
 }
@@ -927,10 +939,6 @@ video {
 
 .mt-\[60px\] {
   margin-top: 60px;
-}
-
-.mt-\[\] {
-  margin-top: ;
 }
 
 .block {
@@ -1198,6 +1206,10 @@ video {
   max-width: 351px;
 }
 
+.max-w-\[425px\] {
+  max-width: 425px;
+}
+
 .max-w-\[515px\] {
   max-width: 515px;
 }
@@ -1302,10 +1314,6 @@ video {
   gap: 2.5rem;
 }
 
-.gap-11 {
-  gap: 2.75rem;
-}
-
 .gap-12 {
   gap: 3rem;
 }
@@ -1354,6 +1362,10 @@ video {
   gap: 16px;
 }
 
+.gap-\[20px\] {
+  gap: 20px;
+}
+
 .gap-\[23px\] {
   gap: 23px;
 }
@@ -1372,10 +1384,6 @@ video {
 
 .gap-\[53px\] {
   gap: 53px;
-}
-
-.gap-\[20px\] {
-  gap: 20px;
 }
 
 .gap-y-\[19px\] {
@@ -1648,6 +1656,11 @@ video {
   background-color: #B999844D;
 }
 
+.bg-\[\#B99984\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(185 153 132 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#D9D9D933\] {
   background-color: #D9D9D933;
 }
@@ -1738,6 +1751,16 @@ video {
   padding-right: 31px;
 }
 
+.px-\[32px\] {
+  padding-left: 32px;
+  padding-right: 32px;
+}
+
+.px-\[35px\] {
+  padding-left: 35px;
+  padding-right: 35px;
+}
+
 .px-\[57px\] {
   padding-left: 57px;
   padding-right: 57px;
@@ -1768,6 +1791,11 @@ video {
   padding-bottom: 1.5rem;
 }
 
+.py-\[11px\] {
+  padding-top: 11px;
+  padding-bottom: 11px;
+}
+
 .py-\[13px\] {
   padding-top: 13px;
   padding-bottom: 13px;
@@ -1786,6 +1814,15 @@ video {
 .py-\[22px\] {
   padding-top: 22px;
   padding-bottom: 22px;
+}
+
+.py-\[28px\] {
+  padding-top: 28px;
+  padding-bottom: 28px;
+}
+
+.pb-1 {
+  padding-bottom: 0.25rem;
 }
 
 .pb-10px {
@@ -1932,6 +1969,10 @@ video {
   padding-top: 1.75rem;
 }
 
+.pt-\[10px\] {
+  padding-top: 10px;
+}
+
 .pt-\[13px\] {
   padding-top: 13px;
 }
@@ -1962,18 +2003,6 @@ video {
 
 .pt-\[50px\] {
   padding-top: 50px;
-}
-
-.pb-\[27px\] {
-  padding-bottom: 27px;
-}
-
-.pt-\[10px\] {
-  padding-top: 10px;
-}
-
-.pb-1 {
-  padding-bottom: 0.25rem;
 }
 
 .text-center {
@@ -2017,8 +2046,8 @@ video {
   font-size: 13px;
 }
 
-.text-\[17px\] {
-  font-size: 17px;
+.text-\[15px\] {
+  font-size: 15px;
 }
 
 .text-\[20px\] {
@@ -2067,10 +2096,6 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-\[15px\] {
-  font-size: 15px;
 }
 
 .font-light {
@@ -2157,6 +2182,10 @@ video {
   line-height: 20px;
 }
 
+.leading-\[22px\] {
+  line-height: 22px;
+}
+
 .leading-\[24px\] {
   line-height: 24px;
 }
@@ -2213,12 +2242,21 @@ video {
   color: #3D3D3D99;
 }
 
+.text-\[\#B99984\] {
+  --tw-text-opacity: 1;
+  color: rgb(185 153 132 / var(--tw-text-opacity));
+}
+
 .text-\[\#FFFFFF66\] {
   color: #FFFFFF66;
 }
 
 .text-\[\#FFFFFF99\] {
   color: #FFFFFF99;
+}
+
+.text-\[\#FFFFFFB2\] {
+  color: #FFFFFFB2;
 }
 
 .text-graphite-gray {
@@ -2247,6 +2285,10 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.underline {
+  text-decoration-line: underline;
 }
 
 .opacity-0 {
@@ -2803,6 +2845,10 @@ input[type="range"]:focus {
   .products-box.list-product {
     border-top-width: 0px;
   }
+
+  .over {
+    overflow-y: auto;
+  }
 }
 
 @media screen and (max-width: 1024px) {
@@ -2902,12 +2948,55 @@ input[type="range"]:focus {
   }
 }
 
+.checkbox-label {
+  position: relative;
+  padding-left: 24px;
+}
+
+.checkbox-input:checked + .checkbox-label::after {
+  transform: scale(1) translateY(-50%);
+}
+
+.checkbox-label::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+  width: 14px;
+  height: 14px;
+  background: #b99984;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.checkbox-label::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 3px;
+  background-image: url(../assets/images/icons/check.svg);
+  background-size: contain;
+  width: 8px;
+  height: 6px;
+  background-repeat: no-repeat;
+  transform: scale(0) translateY(-50%);
+}
+
 .placeholder\:text-\[\#3132455E\]::-moz-placeholder {
   color: #3132455E;
 }
 
 .placeholder\:text-\[\#3132455E\]::placeholder {
   color: #3132455E;
+}
+
+.placeholder\:text-\[\#B9998478\]::-moz-placeholder {
+  color: #B9998478;
+}
+
+.placeholder\:text-\[\#B9998478\]::placeholder {
+  color: #B9998478;
 }
 
 .hover\:bg-light-brown:hover {
@@ -3068,6 +3157,10 @@ input[type="range"]:focus {
     margin-top: 33px;
   }
 
+  .md\:mt-\[36px\] {
+    margin-top: 36px;
+  }
+
   .md\:mt-\[3px\] {
     margin-top: 3px;
   }
@@ -3110,10 +3203,6 @@ input[type="range"]:focus {
 
   .md\:mt-\[91px\] {
     margin-top: 91px;
-  }
-
-  .md\:mt-\[36px\] {
-    margin-top: 36px;
   }
 
   .md\:block {
@@ -3181,6 +3270,10 @@ input[type="range"]:focus {
     justify-content: flex-end;
   }
 
+  .md\:gap-11 {
+    gap: 2.75rem;
+  }
+
   .md\:gap-2\.5 {
     gap: 0.625rem;
   }
@@ -3203,10 +3296,6 @@ input[type="range"]:focus {
 
   .md\:gap-\[63px\] {
     gap: 63px;
-  }
-
-  .md\:gap-11 {
-    gap: 2.75rem;
   }
 
   .md\:space-y-3 > :not([hidden]) ~ :not([hidden]) {
@@ -3266,6 +3355,10 @@ input[type="range"]:focus {
     padding-bottom: 0px;
   }
 
+  .md\:pb-2 {
+    padding-bottom: 0.5rem;
+  }
+
   .md\:pb-8 {
     padding-bottom: 2rem;
   }
@@ -3314,6 +3407,10 @@ input[type="range"]:focus {
     padding-top: 2.25rem;
   }
 
+  .md\:pt-\[14px\] {
+    padding-top: 14px;
+  }
+
   .md\:pt-\[58px\] {
     padding-top: 58px;
   }
@@ -3324,14 +3421,6 @@ input[type="range"]:focus {
 
   .md\:pt-\[92px\] {
     padding-top: 92px;
-  }
-
-  .md\:pt-\[14px\] {
-    padding-top: 14px;
-  }
-
-  .md\:pb-2 {
-    padding-bottom: 0.5rem;
   }
 
   .md\:text-left {
@@ -3349,6 +3438,10 @@ input[type="range"]:focus {
 
   .md\:text-\[128px\] {
     font-size: 128px;
+  }
+
+  .md\:text-\[17px\] {
+    font-size: 17px;
   }
 
   .md\:text-\[28px\] {
@@ -3378,10 +3471,6 @@ input[type="range"]:focus {
     line-height: 1.25rem;
   }
 
-  .md\:text-\[17px\] {
-    font-size: 17px;
-  }
-
   .md\:leading-6 {
     line-height: 1.5rem;
   }
@@ -3406,16 +3495,12 @@ input[type="range"]:focus {
     line-height: 55.73px;
   }
 
-  .md\:leading-\[60px\] {
-    line-height: 60px;
-  }
-
-  .md\:leading-3 {
-    line-height: .75rem;
-  }
-
   .md\:leading-\[60\.16px\] {
     line-height: 60.16px;
+  }
+
+  .md\:leading-\[60px\] {
+    line-height: 60px;
   }
 
   .md\:text-white {
@@ -3729,6 +3814,10 @@ input[type="range"]:focus {
     position: relative;
   }
 
+  .xl\:z-0 {
+    z-index: 0;
+  }
+
   .xl\:-ml-\[53px\] {
     margin-left: -53px;
   }
@@ -3843,10 +3932,6 @@ input[type="range"]:focus {
 
   .xl\:border-b-0 {
     border-bottom-width: 0px;
-  }
-
-  .xl\:border-t {
-    border-top-width: 1px;
   }
 
   .xl\:px-0 {
